refactor(agent): 重构 Agent相关代码
- 移除了多个类中未使用的导入
- 删除了部分冗余代码和不必要的类型转换
- 优化了部分代码结构，提高了可读性- 统一了代码风格，如使用 toList() 替代 Collectors.toList()